[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/GameOver.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/pushupFall.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 53
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=4]
action = "interact"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Labels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sentence1" type="RichTextLabel" parent="Labels"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -364.898
margin_top = 78.5723
margin_right = 364.898
margin_bottom = 159.318
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "Seems you have fallen asleep and unintentionally slept the rest of the day away."
text = "Seems you have fallen asleep and unintentionally slept the rest of the day away."

[node name="Sentence2" type="RichTextLabel" parent="Labels"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -364.898
margin_top = 204.047
margin_right = 364.898
margin_bottom = 284.793
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "And you only got 5/10 tasks completed. Oh well. These things happen sometimes."
text = "And you only got 5/10 tasks completed. Oh well. These things happen sometimes."

[node name="Sentence3" type="RichTextLabel" parent="Labels"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -364.898
margin_top = 307.729
margin_right = 364.898
margin_bottom = 388.474
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "Some days you will conquer to the fullest extent. And some days you may only get"
text = "Some days you will conquer to the fullest extent. And some days you may only get"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sentence4" type="RichTextLabel" parent="Labels"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.398
margin_top = 116.818
margin_right = 339.535
margin_bottom = 229.624
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = "Halfway There"
text = "Halfway There"

[node name="MainMenuButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -87.3884
margin_right = 150.0
margin_bottom = -49.3884
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Main Menu"
flat = true

[node name="FinalSentenceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
